--- a/Stylesheets/loginStyle.css
+++ b/Stylesheets/loginStyle.css
@@ -44,9 +44,38 @@
     opacity: 0;
 }
 
-#btnLogin{
-    height: 20%;
-    width: 50%;
-    border-radius: 0.5em;
+.loginBtnDiv{
+    height: 15%;
+    width: 25%;
     margin: 20px;
+}
+
+#btnLogin{
+    height: 90%;
+    width: 90%;
+    font-size: 20px;
+    border-radius: 0.5em;
+    transition: 0.5s
+}
+
+#btnLogin:hover{
+    height: 100%;
+    width: 100%;
+    font-size: 25px;
+}
+
+@media screen and (max-width: 700px) {
+    .siteInfo{
+        font-size: 45px;
+    }
+
+    .inputLogin{
+        font-size: 20px;
+    }
+
+    .loginBtnDiv{
+        height: 20%;
+        width: 50%;
+        margin: 20px;
+    }
 }
