--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -36,7 +36,13 @@ header {
     background-color: var(--dark-blue);
     color: var(--dark-green);
     font-size: 35px;
+}
 
+@media screen and (max-width: 350px) {
+    header{
+        font-size: 25px;
+    }
+    
 }
 
 main {
@@ -63,3 +69,4 @@ footer {
     background-color: var(--light-green);
     cursor: pointer;
 }
+
