--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -49,6 +49,9 @@ main {
     grid-area: main;
     background-color: var(--blue);
     color: var(--light-green);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
 }
 
