--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
     height: 100vh;
     color: white;
+    background-color: var(--dark-blue);
     font-family: 'Poppins', sans-serif;
 }
 
@@ -32,17 +33,17 @@ body {
     transition: 0.5s;
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
-.notFound{
+.notFound {
     text-decoration: none;
     border-radius: 0.5em;
     padding: 3%;
 }
 
-.notFound:hover{
+.notFound:hover {
     padding: 4%;
 }
 
@@ -54,10 +55,9 @@ header {
 }
 
 @media screen and (max-width: 350px) {
-    header{
+    header {
         font-size: 25px;
     }
-    
 }
 
 main {
@@ -77,14 +77,13 @@ footer {
     font-size: 20px;
 }
 
-.btn{
+.btn {
     text-align: center;
     background-color: var(--dark-green);
     color: var(--dark-blue);
 }
 
-.btn:hover{
+.btn:hover {
     background-color: var(--light-green);
     cursor: pointer;
 }
-
