--- a/Stylesheets/loginStyle.css
+++ b/Stylesheets/loginStyle.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     height: 80%;
     width: 80%;
+    margin: 20px;
 }
 
 ::placeholder{
@@ -64,9 +65,15 @@
     font-size: 25px;
 }
 
+@media screen and (max-width: 1000px) {
+    .siteInfo{
+        font-size: 40px;
+    }
+}
+
 @media screen and (max-width: 700px) {
     .siteInfo{
-        font-size: 45px;
+        font-size: 30px;
     }
 
     .inputLogin{
