--- a/Stylesheets/resultStyle.css
+++ b/Stylesheets/resultStyle.css
@@ -1,143 +1,141 @@
 .main {
-    justify-content: start;
+  justify-content: start;
 }
 
 .mainHeader {
-    height: 10%;
-    width: 100%;
-    margin: 10px;
-    justify-content: space-between;
-    align-items: start;
+  height: 30px;
+  width: 100%;
+  margin: 10px;
+  justify-content: space-between;
+  align-items: start;
 }
 
 #homeBtn,
 #logoutBtn {
-    height: 95%;
-    width: 8%;
-    margin-right: 10px;
-    margin-left: 10px;
-    border-radius: 0.5em;
-    transition: 0.5s;
-    font-size: 20px;
+  height: 95%;
+  width: 8%;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-radius: 0.5em;
+  transition: 0.5s;
+  font-size: 20px;
 }
 
 #homeBtn:hover,
 #logoutBtn:hover {
-    height: 100%;
-    width: 10%;
-    font-size: 25px;
+  height: 100%;
+  width: 10%;
+  font-size: 25px;
 }
 
-.title{
-    height: 5%;
-    width: 100%;
-    font-size: 35px;
-    margin: 10px;
-    text-align: center;
+.title {
+  height: 5%;
+  width: 100%;
+  font-size: 35px;
+  margin: 10px;
+  text-align: center;
 }
 
-.offerContainer{
-    height: auto;
-    width: 100%;
-    margin: 30px;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+.offerContainer {
+  height: auto;
+  width: 100%;
+  margin: 30px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
-.offerCard{
-    height: 50vh;
-    width: 350px;
-    flex-direction: column;
-    transition: 0.5s;
-    margin-left: 40px;
-    margin-right: 40px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.offerCard {
+  height: 50vh;
+  width: 350px;
+  flex-direction: column;
+  transition: 0.5s;
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.offerCard:hover{
-    height: 50vh;
-    width: 380px;
-    cursor: pointer;
+.offerCard:hover {
+  height: 50vh;
+  width: 380px;
+  cursor: pointer;
 }
 
-.offerCardTitle{
-    height: 20%;
-    width: 100%;
-    margin: 0;
-    font-size: 20px;
-    flex-wrap: wrap;
-    text-align: center;
-    border-top-right-radius: 0.5em;
-    border-top-left-radius: 0.5em;
-    background-color: var(--dark-blue)
+.offerCardTitle {
+  height: 20%;
+  width: 100%;
+  margin: 0;
+  font-size: 20px;
+  flex-wrap: wrap;
+  text-align: center;
+  border-top-right-radius: 0.5em;
+  border-top-left-radius: 0.5em;
+  background-color: var(--dark-blue);
 }
 
-.offerCardInfoBlock{
-    height: 80%;
-    width: 100%;
-    flex-direction: column;
-    border-bottom-right-radius: 0.5em;
-    border-bottom-left-radius: 0.5em;
-    align-items: left;
-    background-color: var(--grey);
+.offerCardInfoBlock {
+  height: 80%;
+  width: 100%;
+  flex-direction: column;
+  border-bottom-right-radius: 0.5em;
+  border-bottom-left-radius: 0.5em;
+  align-items: left;
+  background-color: var(--grey);
 }
 
-.offerInfoText{
-    width: 80%;
-    flex-wrap: wrap;
+.offerInfoText {
+  width: 80%;
+  flex-wrap: wrap;
 }
 
-.offerTotal{
-    font-weight: bolder;
+.offerTotal {
+  font-weight: bolder;
 }
 
 @media screen and (max-width: 1000px) {
+  #homeBtn,
+  #logoutBtn {
+    height: 95%;
+    width: 15%;
+  }
 
-    #homeBtn,
-    #logoutBtn {
-        height: 95%;
-        width: 15%;
-    }
+  #homeBtn:hover,
+  #logoutBtn:hover {
+    height: 100%;
+    width: 20%;
+    font-size: 25px;
+  }
 
-    #homeBtn:hover,
-    #logoutBtn:hover {
-        height: 100%;
-        width: 20%;
-        font-size: 25px;
-    }
-
-    .title{
-        font-size: 30px;
-    }
+  .title {
+    font-size: 30px;
+  }
 }
 
 @media screen and (max-width: 500px) {
+  #homeBtn,
+  #logoutBtn {
+    height: 95%;
+    width: 27%;
+  }
 
-    #homeBtn,
-    #logoutBtn {
-        height: 95%;
-        width: 27%;
-    }
+  #homeBtn:hover,
+  #logoutBtn:hover {
+    height: 100%;
+    width: 32%;
+  }
 
-    #homeBtn:hover,
-    #logoutBtn:hover {
-        height: 100%;
-        width: 32%;
-    }
-
-    .title{
-        font-size: 20px;
-    }
+  .title {
+    font-size: 20px;
+  }
 }
 
 @media screen and (max-width: 350px) {
-    .offerCardTitle{
-        font-size: 17px;
-    }
+  .offerCardTitle {
+    font-size: 17px;
+  }
 
-    .offerInfoText{
-        width: 90%;
-        font-size: 14px;
-    }
+  .offerInfoText {
+    width: 90%;
+    font-size: 14px;
+  }
 }
