--- a/Stylesheets/detailViewStyle.css
+++ b/Stylesheets/detailViewStyle.css
@@ -87,6 +87,10 @@
   font-size: 15px;
 }
 
+#errorMessageContainer {
+  display: none;
+}
+
 @media screen and (max-width: 1000px) {
   .cancelBtn {
     height: 95%;
