--- a/Stylesheets/resultStyle.css
+++ b/Stylesheets/resultStyle.css
@@ -2,6 +2,11 @@
   justify-content: start;
 }
 
+a {
+  text-decoration: none;
+  color: var(--light-green);
+}
+
 .mainHeader {
   height: 30px;
   width: 100%;
