--- a/Stylesheets/offersStyle.css
+++ b/Stylesheets/offersStyle.css
@@ -53,6 +53,7 @@ svg {
   width: 30%;
   flex-direction: column;
   transition: 0.5s;
+  border-radius: 0.5em;
   margin: 20px;
 }
 
@@ -62,6 +63,7 @@ svg {
 
 .offerCardHeader {
   width: 100%;
+  height: 30%;
   justify-content: right;
   background-color: var(--dark-blue);
   border-top-left-radius: 0.5em;
@@ -71,7 +73,8 @@ svg {
 .offerCardBtn {
   height: 40px;
   width: 40px;
-  margin: 10px;
+  margin-right: 15px;
+  margin: 15px 15px 15px 0;
   border-radius: 0.3em;
 }
 
@@ -93,7 +96,19 @@ svg {
   text-align: center;
 }
 
+.btnAdd {
+  height: 100%;
+  width: 100%;
+  border-radius: 0.5em;
+}
+
+.plusBtnSVG {
+  height: 50px;
+  width: 50px;
+}
+
 @media screen and (max-width: 1000px) {
+
   #homeBtn,
   #logoutBtn {
     height: 95%;
@@ -117,6 +132,7 @@ svg {
 }
 
 @media screen and (max-width: 500px) {
+
   #homeBtn,
   #logoutBtn {
     height: 95%;
@@ -135,5 +151,34 @@ svg {
 
   .offerCard {
     width: 80%;
+  }
+}
+
+@media screen and (max-height: 1000px) {
+  .offerCard {
+    height: 30vh;
+  }
+
+  .offerCardText {
+    margin: 0;
+  }
+
+}
+
+@media screen and (max-height: 700px) {
+  .offerCard {
+    height: 40vh;
+  }
+}
+
+@media screen and (max-height: 500px) {
+  .offerCard {
+    height: 50vh;
+  }
+}
+
+@media screen and (max-height: 370px) {
+  .offerCard {
+    height: 60vh;
   }
 }
